--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Inter";
-    src: url("https://alloooshe.github.io/datavis.homework/fonts/Inter-VariableFont_slnt,wght.ttf") format("ttf");
+    src: url("datavis.homework/fonts/Inter-VariableFont_slnt,wght.ttf") format("ttf");
    }
 
 body{
